Prevent the context menu from going offscreen.

--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -20,7 +20,6 @@
 }
 
 body {
-	min-height: 100vh;
 	color: var(--primary-text);
 	background: var(--window-background);
 	line-height: 1.6;
