--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -7,6 +7,9 @@ body {
 	flex-direction: column;
 	padding: 0;
 	margin: 0;
+	min-height: 100vh;
+	max-height: 100vh;
+	overflow: hidden;
 }
 
 #root {
